Done, header + main + right side bar done

--- a/index.html
+++ b/index.html
@@ -53,8 +53,128 @@
             </div>
         </div>
         <div class="header">
+            <div class="headerTop">
+                <img src="./icons/magnify.svg" alt="Search Icon">
+                <div class="searchBar"></div>
+                <img src="./icons/bell-ring-outline.svg" alt="Notifications Icon">
+                <img src="./icons/hutaomcd.webp" alt="Hu Tao Profile Picture">
+                <p>Hu Tao</p>
+            </div>
+            <div class="headerBottom">
+                <img src="./icons/hutaomcd.webp" alt="Hu Tao Profile Picture">
+                <div class="welcomeDiv">
+                    <p class="greeting">Yahoo,</p>
+                    <p class="username">Hu Tao (@hutao)</p>
+                </div>
+                <div class="new">New</div>
+                <div class="upload">Upload</div>
+                <div class="share">Share</div>
+            </div>
         </div>
         <div class="main">
+            <div class="mainLeft">
+                <p>Your Projects</p>
+                <div class="projects">
+                    <div class="card">
+                        <p class="card-title">Eternal Embers</p>
+                        <p class="card-content">Poetry Collection Echoing Themes of Life, Death, and Reincarnation</p>
+                        <div class="card-icons">
+                            <img src="./icons/star-plus-outline.svg" alt="Star Icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="Eye Icon">
+                            <img src="./icons/vector-polyline.svg" alt="Vector Icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">Spirits and Shadows</p>
+                        <p class="card-content">Artwork Collection Displaying Ghost Stories</p>
+                        <div class="card-icons">
+                            <img src="./icons/star-plus-outline.svg" alt="Star Icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="Eye Icon">
+                            <img src="./icons/vector-polyline.svg" alt="Vector Icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">The Dance of Departed</p>
+                        <p class="card-content">Visual Arts Performance About The Line Between Life and Death (feat. Yunjin)</p>
+                        <div class="card-icons">
+                            <img src="./icons/star-plus-outline.svg" alt="Star Icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="Eye Icon">
+                            <img src="./icons/vector-polyline.svg" alt="Vector Icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">Ghostly Gourmet</p>
+                        <p class="card-content">Overtaking Xiangling as the Best Chef in Liyue</p>
+                        <div class="card-icons">
+                            <img src="./icons/star-plus-outline.svg" alt="Star Icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="Eye Icon">
+                            <img src="./icons/vector-polyline.svg" alt="Vector Icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">Jokes From The Other Side</p>
+                        <p class="card-content">Book Based on Dark Humor</p>
+                        <div class="card-icons">
+                            <img src="./icons/star-plus-outline.svg" alt="Star Icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="Eye Icon">
+                            <img src="./icons/vector-polyline.svg" alt="Vector Icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="card-title">To Catch A Zombie</p>
+                        <p class="card-content">Finally Catching A Certain Zombie (feat. Qiqi)</p>
+                        <div class="card-icons">
+                            <img src="./icons/star-plus-outline.svg" alt="Star Icon">
+                            <img src="./icons/eye-plus-outline.svg" alt="Eye Icon">
+                            <img src="./icons/vector-polyline.svg" alt="Vector Icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mainRight">
+                <p class="right-title">Announcements</p>
+                <div class="sidecard">
+                    <p class="announcement-title">Site Maintenance</p>
+                    <p class="announcement-content">This site will be down in 3 hours.</p>
+                    <hr class="divider">
+                    <p class="announcement-title">Community Share Day</p>
+                    <p class="announcement-content">Share your projects with others!</p>
+                    <hr class="divider">
+                    <p class="announcement-title">Updated Privacy Policy</p>
+                    <p class="announcement-content">Please see the new privacy policy.</p>
+                </div>
+                <p class="right-title">Trending</p>
+                <div class="sidecard">
+                    <div class="trending-group">
+                        <img src="./icons/raidenmcd.jpg" alt="Raiden Shogun Profile Picture">
+                        <div class="trending-profile">
+                            <p class="trending-user">@ei</p>
+                            <p class="trending-project">Cooking With Ei</p>
+                        </div>
+                    </div>
+                    <div class="trending-group">
+                        <img src="./icons/hutaomcd.webp" alt="Hu Tao Profile Picture">
+                        <div class="trending-profile">
+                            <p class="trending-user">@hutao</p>
+                            <p class="trending-project">To Catch A Zombie</p>
+                        </div>
+                    </div>
+                    <div class="trending-group">
+                        <img src="./icons/qiqimcd.jpg" alt="Qiqi Profile Picture">
+                        <div class="trending-profile">
+                            <p class="trending-user">@qiqi</p>
+                            <p class="trending-project">To Escape Hu Tao</p>
+                        </div>
+                    </div>
+                    <div class="trending-group">
+                        <img src="./icons/xianglingmcd.png" alt="Xiangling Profile Picture">
+                        <div class="trending-profile">
+                            <p class="trending-user">@xiangling</p>
+                            <p class="trending-project">Best Chef In Liyue</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
   </body>
